--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-scroll": "^1.8.2",
     "react-slick": "^0.28.1",
     "redux": "^4.0.5",
+    "redux-localstorage-simple": "^2.4.0",
     "redux-thunk": "^2.3.0",
     "web-vitals": "^1.1.1"
   },
