--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.2",
     "react-slick": "^0.28.1",
+    "recharts": "^2.0.9",
     "redux": "^4.0.5",
     "redux-localstorage-simple": "^2.4.0",
     "redux-thunk": "^2.3.0",
