--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-icons": "^4.2.0",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "react-scroll": "^1.8.2",
     "react-slick": "^0.28.1",
     "recharts": "^2.0.9",
@@ -53,7 +53,7 @@
     "@babel/core": "^7.12.3",
     "@babel/eslint-parser": "^7.16.5",
     "@babel/preset-react": "^7.16.5",
-    "@commitlint/cli": "^15.0.0",
+    "@commitlint/cli": "^18.6.0",
     "@commitlint/config-conventional": "^15.0.0",
     "eslint": "^7.22.0",
     "eslint-plugin-react": "^7.27.1",
